--- a/index.html
+++ b/index.html
@@ -44,23 +44,21 @@
     <!-- Back to Top Button Start -->
     <div
       id="back-to-top"
-      class="fixed bottom-[90px] right-6 lg:bottom-8 lg:right-8 w-14 h-14 flex justify-center items-center rounded-full cursor-pointer opacity-0 invisible transition-opacity duration-500 z-[50]"
+      class="fixed bottom-[90px] right-6 xl:bottom-12 xl:right-8 w-14 h-14 flex justify-center items-center rounded-full cursor-pointer opacity-0 invisible transition-opacity duration-500 z-[50]"
     >
-      <svg
-        class="w-14 h-14 transition-colors duration-300 group"
-        viewBox="0 0 100 119"
-        fill="none"
+       <svg
+      class="w-14 h-14 transition-colors duration-300 group"
         xmlns="http://www.w3.org/2000/svg"
+        width="100"
+        height="100"
+        viewBox="0 0 100 100"
+        fill="none"
       >
-        <!-- Background -->
+        <circle class="fill-[var(--primary-color)] group-hover:fill-[var(--black)] transition-colors duration-300" cx="50" cy="50" r="50" fill="#624D9F" />
         <path
-          d="M76.4787 22.9461L50 11L23.5213 22.9461L50 3.7082L76.4787 22.9461ZM10.0556 29.0213L12.3536 36.0938C4.66128 44.887 0 56.3992 0 69C0 96.6142 22.3858 119 50 119C77.6142 119 100 96.6142 100 69C100 56.3992 95.3387 44.887 87.6464 36.0938L89.9444 29.0213L50 0L10.0556 29.0213Z"
-          class="fill-[var(--primary-color)] group-hover:fill-[var(--black)] transition-colors duration-300"
-        />
-        <!-- Arrow -->
-        <path
-          d="M50 85V53M50 53L38 65M50 53L62 65"
-          class="stroke-[var(--secondary-color)] transition-colors duration-300"
+        class="stroke-[var(--secondary-color)] transition-colors duration-300"
+          d="M50 66V34M50 34L38 46M50 34L62 46"
+          stroke="white"
           stroke-width="4"
           stroke-linecap="round"
           stroke-linejoin="round"
@@ -71,7 +69,7 @@
 
     <!-- Fly Cart Start -->
     <div
-      class="cart-icon fixed bottom-[90px] left-6 lg:bottom-8 lg:left-8 w-12 h-12 bg-[var(--primary-color)] hover:bg-[var(--black)] rounded-full cursor-pointer transition duration-300 z-[50] flex justify-center items-center"
+      class="cart-icon fixed bottom-[90px] left-6 xl:bottom-12 xl:left-8 w-12 h-12 bg-[var(--primary-color)] hover:bg-[var(--black)] rounded-full cursor-pointer transition duration-300 z-[50] flex justify-center items-center"
     >
       <div class="relative flex justify-center items-center">
         <svg
@@ -168,7 +166,7 @@
           <!-- Mobile Menu Button -->
           <button
             id="menu-btn"
-            class="lg:hidden text-[var(--text)] focus:outline-none text-2xl cursor-pointer"
+            class="xl:hidden text-[var(--text)] focus:outline-none text-2xl cursor-pointer"
           >
             ☰
           </button>
@@ -180,7 +178,7 @@
           </div>
 
           <!-- Search Box -->
-          <div class="hidden w-full max-w-[50%] lg:flex flex-1 mx-4">
+          <div class="hidden w-full max-w-[50%] xl:flex flex-1 mx-4">
             <input
               type="text"
               placeholder="Search for rice, sweets, snacks, Beverages or more..."
@@ -214,7 +212,7 @@
             <!-- Language -->
             <div
               id="language-selector"
-              class="relative font-primary m-0 lg:mr-[16px]"
+              class="relative font-primary m-0 xl:mr-[16px]"
             >
               <div
                 class="flex items-center space-x-2 p-[8px] pr-[12px] rounded-full cursor-pointer bg-[var(--accent1)] transition-colors duration-200"
@@ -274,7 +272,7 @@
             <!-- Icon -->
             <a
               href="./wishlist.html"
-              class="whichlist relative cursor-pointer hidden lg:flex"
+              class="whichlist relative cursor-pointer hidden xl:flex"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -302,7 +300,7 @@
 
             <a
               href="#"
-              class="cart-icon cart relative cursor-pointer hidden lg:flex"
+              class="cart-icon cart relative cursor-pointer hidden xl:flex"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -327,12 +325,12 @@
             </a>
 
             <div
-              class="bar hidden lg:block w-[1px] h-[18px] bg-[var(--border)]"
+              class="bar hidden xl:block w-[1px] h-[18px] bg-[var(--border)]"
             ></div>
 
             <a
               href="#"
-              class="profile items-center justify-center rounded-full cursor-pointer p-2 bg-[var(--accent1)] hidden lg:flex m-0"
+              class="profile items-center justify-center rounded-full cursor-pointer p-2 bg-[var(--accent1)] hidden xl:flex m-0"
             >
               <i
                 class="far fa-user-circle text-[22px] text-[var(--primary-color)]"
@@ -350,7 +348,7 @@
 
       <div
         id="cart-sidebar"
-        class="fixed top-0 right-0 h-full w-full md:w-96 bg-[var(--secondary-color)] shadow-lg transition-all duration-300 ease-in-out z-[150]"
+        class="fixed top-0 right-0 h-full w-full md:w-96 bg-[var(--secondary-color)] shadow-lg transition-all duration-300 ease-in-out z-[200]"
         style="transform: translateX(100%)"
       >
         <div class="wrapper p-4 pt-0">
@@ -790,7 +788,7 @@
                   class="flex-1 text-sm text-[var(--text)] border border-[var(--border)] rounded-tl-full rounded-bl-full p-2 px-3 focus:outline-none focus:border-[var(--primary-color)] transition duration-300"
                 />
                 <button
-                  class="apply-btn bg-[var(--primary-color)] border border-[var(--primary-color)] text-sm text-[var(--secondary-color)] rounded-tr-full rounded-br-full px-4 py-2 hover:bg-[var(--black)] transition duration-300"
+                  class="apply-btn bg-[var(--primary-color)] border border-[var(--primary-color)] text-sm text-[var(--secondary-color)] rounded-tr-full rounded-br-full px-4 py-2 hover:bg-[var(--black)] transition duration-300 cursor-pointer"
                 >
                   Apply
                 </button>
@@ -810,7 +808,7 @@
             </div>
 
             <button
-              class="continue-btn w-full bg-[var(--primary-color)] border border-[var(--primary-color)] text-[16px] text-[var(--secondary-color)] rounded-full px-3 py-2 hover:bg-[var(--black)] transition duration-300"
+              class="continue-btn w-full bg-[var(--primary-color)] border border-[var(--primary-color)] text-[16px] text-[var(--secondary-color)] rounded-full px-3 py-2 hover:bg-[var(--black)] transition duration-300 cursor-pointer"
             >
               Checkout <span id="checkout-price">253.00€</span>
             </button>
@@ -828,7 +826,7 @@
       </div>
 
       <!-- Desktop Menu -->
-      <div class="menu-bar hidden lg:block border-[var(--border)]">
+      <div class="menu-bar hidden xl:block border-[var(--border)]">
         <div class="custom-container py-3 relative">
           <ul
             class="flex items-center space-x-4 gap-2 justify-center text-[var(--text)] font-medium"
@@ -836,7 +834,7 @@
             <li class="group m-0">
               <a
                 href="#"
-                class="menu-item flex items-center space-x-1 hover:text-[var(--primary-color)] p-2 px-3 rounded-full group-hover:bg-[var(--accent1)] bg-[var(--accent1)] hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[14px]"
+                class="menu-item flex items-center space-x-1 hover:text-[var(--primary-color)] p-2 px-3 rounded-full group-hover:bg-[var(--accent1)] bg-[var(--accent1)] hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[16px]"
               >
                 <span>All Categories</span>
                 <i
@@ -849,7 +847,7 @@
               >
                 <div class="custom-container">
                   <div
-                    class="mx-auto shadow-sm grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
+                    class="mx-auto shadow-sm grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] p-[30px] rounded-[12px]"
                   >
                     <div>
                       <h4 class="font-bold mb-4">Instant Food & Mixes</h4>
@@ -1083,14 +1081,14 @@
             <li class="m-0">
               <a
                 href="#"
-                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-3 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[14px]"
+                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-2 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[16px]"
                 >New Arrivals</a
               >
             </li>
             <li class="m-0">
               <a
                 href="#"
-                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-3 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[14px]"
+                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-2 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[16px]"
                 >Best Sellers</a
               >
             </li>
@@ -1098,7 +1096,7 @@
             <li class="group m-0">
               <a
                 href="#"
-                class="menu-item flex items-center space-x-1 hover:text-[var(--primary-color)] p-2 px-3 rounded-full group-hover:bg-[var(--accent1)] hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[14px]"
+                class="menu-item flex items-center space-x-1 hover:text-[var(--primary-color)] p-2 px-3 rounded-full group-hover:bg-[var(--accent1)] hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[16px]"
               >
                 <span>Essentials</span>
                 <i
@@ -1111,7 +1109,7 @@
               >
                 <div class="custom-container">
                   <div
-                    class="mx-auto shadow-sm grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] shadow-sm p-[30px] rounded-[12px]"
+                    class="mx-auto shadow-sm grid grid-cols-5 gap-1 text-sm bg-[var(--secondary-color)] p-[30px] rounded-[12px]"
                   >
                     <div>
                       <h4 class="font-bold mb-4">Instant Food & Mixes</h4>
@@ -1346,7 +1344,7 @@
             <li class="m-0">
               <a
                 href="#"
-                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-3 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[14px]"
+                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-2 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[16px]"
                 >Fruits & Vegetables</a
               >
             </li>
@@ -1354,7 +1352,7 @@
             <li class="group m-0">
               <a
                 href="#"
-                class="menu-item flex items-center space-x-1 hover:text-[var(--primary-color)] p-2 px-3 rounded-full group-hover:bg-[var(--accent1)] hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[14px]"
+                class="menu-item flex items-center space-x-1 hover:text-[var(--primary-color)] p-2 px-3 rounded-full group-hover:bg-[var(--accent1)] hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[16px]"
               >
                 <span>Fresh & Frozen</span>
                 <i
@@ -1602,14 +1600,14 @@
             <li class="m-0">
               <a
                 href="#"
-                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-3 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[14px]"
+                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-2 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[16px]"
                 >Blog</a
               >
             </li>
             <li class="m-0">
               <a
                 href="#"
-                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-3 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[14px]"
+                class="menu-item flex items-center hover:text-[var(--primary-color)] p-2 px-2 rounded-full hover:bg-[var(--accent1)] active:bg-[var(--accent1)] text-[16px]"
                 >Contact</a
               >
             </li>
@@ -2231,18 +2229,18 @@
 
     <!-- Mobile Bottom Navbar -->
     <div
-      class="mobile-navigation font-primary fixed bottom-0 bg-transparent left-0 w-full p-2 pt-0 lg:hidden z-50"
+      class="mobile-navigation font-primary fixed bottom-0 bg-transparent left-0 w-full p-2 pt-0 xl:hidden z-10"
     >
       <div
         class="navigation-wrap py-2 bg-[var(--secondary-color)] border border-[var(--border)] rounded-lg"
       >
         <div class="wrap">
           <div class="flex">
-            <div class="flex-1 group">
+            <div class="flex-1">
               <div
-                class="flex items-end justify-center text-center mx-auto px-[4px] w-full text-[var(--text)] group-hover:text-[var(--primary-color)]"
+                class="flex items-center justify-center text-center mx-auto w-full px-[4px] pt-1 text-[var(--text)]"
               >
-                <a href="./wishlist.html" class="whichlist pt-1">
+                <a href="#" class="wishlist group pt-1 flex flex-col items-center gap-2">
                   <h2 class="w-5 h-5 mx-auto relative cursor-pointer">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -2267,18 +2265,17 @@
                       0
                     </span>
                   </h2>
-                  <span class="block text-sm mt-1">wishlist</span>
                   <span
-                    class="block w-5 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
+                    class="block w-8 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
                   ></span>
                 </a>
               </div>
             </div>
-            <div class="flex-1 group">
+            <div class="flex-1">
               <div
-                class="flex items-end justify-center text-center mx-auto px-[4px] w-full text-[var(--text)] group-hover:text-[var(--primary-color)]"
+                class="flex items-center justify-center text-center mx-auto w-full px-[4px] pt-1 text-[var(--text)]"
               >
-                <a href="#" class="cart-icon pt-1">
+                <a href="#" class="cart-icon group pt-1 flex items-center flex-col gap-2">
                   <h2 class="w-5 h-5 mx-auto relative cursor-pointer">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -2301,37 +2298,35 @@
                       0
                     </span>
                   </h2>
-                  <span class="block text-sm mt-1">Cart</span>
                   <span
-                    class="block w-5 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
+                    class="block w-8 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
                   ></span>
                 </a>
               </div>
             </div>
-            <div class="flex-1 group">
+            <div class="flex-1 ">
               <div
-                class="flex items-end justify-center text-center mx-auto px-[4px] w-full text-[var(--text)] group-hover:text-[var(--primary-color)]"
+                class="flex items-center justify-center text-center mx-auto w-full px-[4px] pt-1 text-[var(--text)]"
               >
-                <a href="#" class="profile pt-1">
-                  <span class="w-5 h-5 mx-auto cursor-pointer">
+                <a href="#" class="home group pt-1 flex items-center justify-center flex-col gap-2">
+                  <span class="w-5 h-5 flex justify-center items-center cursor-pointer">
                     <i
                       class="fa-solid fa-house text-[22px] text-[var(--black)]"
                     ></i>
                   </span>
-                  <span class="block text-sm mt-1">Home</span>
                   <span
-                    class="block w-5 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
+                    class="active block w-8 mx-auto h-1 bg-[var(--primary-color)] group-hover:bg-[var(--primary-color)] rounded-full"
                   ></span>
                 </a>
               </div>
             </div>
 
-            <div class="flex-1 group">
+            <div class="flex-1">
               <div
-                class="flex items-end justify-center text-center mx-auto px-[4px] w-full text-[var(--text)] group-hover:text-[var(--primary-color)]"
+                class="flex items-center justify-center text-center mx-auto w-full px-[4px] pt-1 text-[var(--text)]"
               >
-                <a href="#" class="search pt-1">
-                  <span class="w-5 h-5 mx-auto cursor-pointer">
+                <a href="#" class="search group pt-1 flex items-center flex-col gap-2">
+                  <span class="w-5 h-5 flex justify-center items-center cursor-pointer">
                     <svg
                       class="w-6 h-6"
                       xmlns="http://www.w3.org/2000/svg"
@@ -2349,26 +2344,24 @@
                       />
                     </svg>
                   </span>
-                  <span class="block text-sm mt-1">Search</span>
                   <span
-                    class="block w-5 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
+                    class="block w-8 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
                   ></span>
                 </a>
               </div>
             </div>
-            <div class="flex-1 group">
+            <div class="flex-1">
               <div
-                class="flex items-end justify-center text-center mx-auto px-[4px] w-full text-[var(--text)] group-hover:text-[var(--primary-color)]"
+                class="flex items-center justify-center text-center mx-auto w-full px-[4px] pt-1 text-[var(--text)]"
               >
-                <a href="#" class="profile pt-1">
-                  <span class="w-5 h-5 mx-auto cursor-pointer">
+                <a href="#" class="profile group pt-1 flex items-center flex-col gap-2">
+                  <span class="w-5 h-5 flex justify-center items-center cursor-pointer">
                     <i
                       class="far fa-user-circle text-[22px] text-[var(--black)]"
                     ></i>
                   </span>
-                  <span class="block text-sm mt-1">Profile</span>
                   <span
-                    class="block w-5 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
+                    class="block w-8 mx-auto h-1 group-hover:bg-[var(--primary-color)] rounded-full"
                   ></span>
                 </a>
               </div>
